# examples

./: .gitignore  README.md
CSharp/: ServiceLocator.cs
CSharp/async/: TestAsyncAwait.sln
CSharp/async/TestAsyncAwait/: Program.cs
CSharp/patterns/: CSharpPatterns.sln  README.md
CSharp/patterns/ConsoleApp1/: ConsoleApp1.csproj  Program.cs
CSharp/patterns/HuffmanTree/: HuffmanNode.cs  HuffmanTree.cs
CSharp/projects/OperatorSimulator/: .editorconfig  .gitignore  README.md
CSharp/projects/SampleWpf_2025/: .gitignore  Sample.sln
CSharp/projects/TutorialAspNetCoreMVC/: AspNetCoreMVC.sln
CSharp/projects/TutorialRazorPagesMovie/: RazorPagesMovie.sln
Java/: .gitignore
Java/java/: pom.xml
Python/diplomCHSU/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  data.yaml  diplom.excalidraw  inference_config.yaml  pyproject.toml  train_config.yaml  train_dt.yaml
Python/diplomCHSU/src/configs/: __init__.py  cfg_yaml.py  torch_config.py  yaml_configs.py
Python/diplomCHSU/src/configs/core/: __init__.py  cfg_torch.py
Python/diplomCHSU/src/datasets/: TrainDataset.py
Python/diplomCHSU/src/deploy/: .dockerignore
Python/diplomCHSU/src/inference/: __main__.py
Python/diplomCHSU/src/miku_diplom/: __main__.py  inference.py  train.py
Python/diplomCHSU/src/models/: YOLOInferenceModel.py  YOLOModel.py  YOLOTrainModel.py  __init__.py
Python/diplomCHSU/src/models/core/: __init__.py  modelable.py  yaml_modelable.py
Python/diplomCHSU/src/models/model_yaml/: __init__.py  yaml_modelable.py
Python/diplomCHSU/src/myutils/: __init__.py  checkenv.py  fileutils.py  fixrand.py  gpuinfo.py  mlruns.py
Python/diplomCHSU/src/train/: __main__.py
Python/diplomCHSU/tests/: test_env.ipynb  test_inference.py  test_train.py
Python/pytorch-augmentation/: augmentation.ipynb  augmentation.py
Python/trash/: example-log.ipynb  example-log.py  example-mnist.ipynb  example-mnist.py  gradient_descent.py  prime_factorization.py  turtle_bunny.py
Rust/back/: Cargo.toml
Rust/back/dto/: Cargo.toml
Rust/back/entity/: Cargo.toml
Rust/back/service/: Cargo.toml
Rust/back/service/src/: lib.rs
Rust/back/src/: main.rs
Rust/cicdexample/: Cargo.toml
Rust/cicdexample/src/: main.rs
Rust/cicdexample/src/api/: mod.rs  request.rs  response.rs
Rust/cicdexample/src/domain/: mod.rs
Rust/cicdexample/src/dto/: mod.rs
Rust/cicdexample/src/repository/: mod.rs
Rust/cicdexample/src/service/: mod.rs
Rust/first/: .env.example  .gitignore  Cargo.toml  sweep.timestamp
Rust/first/backend/: Cargo.toml  (+1 more)
Rust/leetcode/: Cargo.toml
Rust/todos/: Cargo.toml
(+228 files in other folders)
