[project]
name = "diplomCHSU"
version = "1.0.0"
description = "Моя Выпускная Квалификационная Работа в ЧГУ"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "natsort>=8.4.0",
    "opencv-python>=4.12.0.88",
    "tqdm>=4.67.1",
    "mlflow>=3.6.0",
    "albumentations>=2.0.8",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.6",
]

[tool.uv]
[tool.uv.sources]
torch = { index = "pytorch-cu" }
torchvision = { index = "pytorch-cu" }

[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
train-model = "src.train.__main__:main"
inference-model = "src.inference.__main__:main"
