[package]
name = "back"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
service = { version = "0.1.0", path = "service" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
# utoipa = "5.4.0"

[workspace]
members = ["dto", "entity", "service"]
