[package]
name = "cicdexample"
version = "0.1.0"
edition = "2024"

[dependencies]
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = [
    "swagger-ui",
    "uuid",
    "chrono",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bon = "3.9.0"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = "1.0.228"
